# Second-brain-interface

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  second-brain.md
.cursor/rules/: ai-agent-friendly.mdc  coding-standards.mdc  docker.mdc  project-core.mdc  python-tooling.mdc  rule-creation.mdc  security.mdc  testing.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml
backend/: config.py  logging_config.py  main.py
backend/api/: augment_routes.py  config_routes.py  debug_routes.py  dependencies.py  health_routes.py  (+5 more)
docs/: dashboard.md  design.md  plan-change-ratio-heuristic.md
frontend/: app.js  index.html  style.css
tests/: conftest.py  test_augment_api.py  test_augment_service.py  test_chunker.py  test_cjk_tokenizer.py  test_config_routes.py  test_debouncer.py  test_debug_tokenize.py  test_dependencies.py  test_e2e.py  test_embedding_service.py  test_event_log.py  test_file_watcher.py  test_filter_builder.py  test_fuzzy_matcher.py  test_graph_enrichment.py  test_hash_registry.py  test_health.py  test_index_routes.py  test_index_service.py  test_intent_classifier.py  test_link_graph.py  test_logging_config.py  test_markdown_parser.py  test_middleware.py  test_performance.py  test_qdrant_adapter.py  test_root_redirect.py  test_scheduler.py  test_search_api.py  test_search_service.py  test_suggest_links.py  test_vault_file_map.py
(+30 files in other folders)
