[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain-interface"
version = "0.1.0"
description = "Local RAG middleware for semantic search over Obsidian vaults"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PLW", "RUF"]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # do-not-perform-function-call-in-default-argument (Depends() pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_reexport = true

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
